/**
 * @module @flowscripter/plugin-api
 */

/**
 * Common extension details for all Flowscripter extension types.
 */
export default interface FlowscripterExtensionDetails {

    /**
     * Optional description for this extension.
     */
    readonly description?: string
}
